--- a/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
+++ b/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
@@ -8,8 +8,7 @@
       "collapsed_sections": [
         "Iv1JvJMxr_3l",
         "ORH0FziVvh-Q",
-        "RWEDdX2metCk",
-        "VWQFmfkF6tHR"
+        "RWEDdX2metCk"
       ]
     },
     "kernelspec": {
@@ -2086,7 +2085,7 @@
         "id": "XiFTikCOizfU",
         "outputId": "c0679600-088e-4f58-b022-c04d39aef130"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2180,7 +2179,7 @@
       "metadata": {
         "id": "0vw6WszfLwaH"
       },
-      "execution_count": 151,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2194,7 +2193,7 @@
       "metadata": {
         "id": "2P0ui1YBpA-v"
       },
-      "execution_count": 150,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2209,7 +2208,7 @@
         "id": "Xzc2Ur5LpC2-",
         "outputId": "7bbe39b8-ddf4-4b62-cb5f-e6bb663660f5"
       },
-      "execution_count": 149,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2243,7 +2242,7 @@
         "id": "Y_u_foEWMxW-",
         "outputId": "dcf34e2e-9c15-49fb-e8c2-bbb5c5e58206"
       },
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2270,7 +2269,7 @@
         "id": "ro63nhj-cHAl",
         "outputId": "830ab700-279c-48d1-dc80-29590f7dcced"
       },
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2314,7 +2313,7 @@
         "id": "tUf5xpxMhsxv",
         "outputId": "1cb3367d-623b-4f3a-cec3-d078af4b4bae"
       },
-      "execution_count": 141,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2337,7 +2336,7 @@
         "id": "hZW0iR-XlLCd",
         "outputId": "8e024825-a3aa-46c1-a1a3-531f557c6a92"
       },
-      "execution_count": 142,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2375,7 +2374,7 @@
         "id": "x6GI441OmzAa",
         "outputId": "cbf28402-9edc-4db3-a509-e117bb4db3a7"
       },
-      "execution_count": 148,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2414,7 +2413,7 @@
         "id": "ow6D5Ta4nSK3",
         "outputId": "78f0e0cd-578d-42aa-8ceb-8b1c24f0f503"
       },
-      "execution_count": 167,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2437,7 +2436,7 @@
       "metadata": {
         "id": "wttxGezDp20p"
       },
-      "execution_count": 162,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2459,7 +2458,7 @@
         "id": "Dv5BhhsNuKUQ",
         "outputId": "759d4c1c-3d33-4aeb-b27f-ab302500aa85"
       },
-      "execution_count": 172,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2482,7 +2481,7 @@
       "metadata": {
         "id": "sTMcoISQwyLe"
       },
-      "execution_count": 177,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2498,7 +2497,7 @@
         "id": "SCVdBdEvxsWv",
         "outputId": "e89fa973-8102-476d-8e98-a6487a61ea6a"
       },
-      "execution_count": 182,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2506,6 +2505,62 @@
           "text": [
             "O fatorial de 5 é igual a 120\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 101: Crie um programa que tenha uma função chamada voto()\n",
+        "# que vai receber como parâmetro o ano de nascimento de uma pessoa,\n",
+        "# retornando um valor literal indicando se uma pessoa tem voto NEGADO,\n",
+        "# OPCIONAL e OBRIGATÓRIO nas eleições.\n",
+        "# by geanclm in 16/04/2022 at 10:47h\n",
+        "\n",
+        "def voto(nasc=0):\n",
+        "    from datetime import date\n",
+        "    ano = date.today().year\n",
+        "    idade = ano-nasc\n",
+        "    if idade < 16:\n",
+        "        msg = (f'voto NEGADO! Idade informada: {idade} anos')\n",
+        "    elif (idade > 16 and idade < 18) or (idade > 70):\n",
+        "        msg = (f'voto OPCIONAL! Idade informada: {idade} anos')\n",
+        "    else:\n",
+        "        msg = (f'voto OBRIGATÓRIO! Idade informada: {idade} anos')\n",
+        "    return msg\n",
+        "\n",
+        "nasc = int(input('Ano de nascimento: [ex: 2000] '))\n",
+        "voto (nasc)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "id": "QBd8Nr3Annzy",
+        "outputId": "2c813c20-b18c-473e-87d1-9ec96c557526"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Ano de nascimento: [ex: 2000] 2001\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'voto OBRIGATÓRIO! Idade informada: 21 anos'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 21
         }
       ]
     }
