--- a/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
+++ b/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
@@ -8,7 +8,10 @@
       "collapsed_sections": [
         "Iv1JvJMxr_3l",
         "ORH0FziVvh-Q",
-        "RWEDdX2metCk"
+        "RWEDdX2metCk",
+        "QOCxu-_Q0ili",
+        "VWQFmfkF6tHR",
+        "26pUs0pTUJxu"
       ]
     },
     "kernelspec": {
@@ -2561,6 +2564,63 @@
           },
           "metadata": {},
           "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 102: Crie um programa que tenha uma função fatorial()\n",
+        "# que receba dois parâmetros: o primeiro que indique o número a calcular\n",
+        "# e outro chamado show, que será um valor lógico (opcional) indicando\n",
+        "# se será mostrado ou não na tela o processo de cálculo do fatorial.\n",
+        "# ---\n",
+        "# by geanclm in 16/04/2022 at 13:31h\n",
+        "# ---\n",
+        "def fatorial(n=0, show=' '):\n",
+        "    \"\"\"\n",
+        "    -> Calcula o fatorial de um número\n",
+        "    :param n: número para cálculo\n",
+        "    :param show: (opcional) retorna o processo de cálculo\n",
+        "    :return: fatorial de um número n\n",
+        "    \"\"\"\n",
+        "    f = 1 # variável local\n",
+        "    print('-'*25)\n",
+        "    for i in range (n, 0, -1):\n",
+        "        f *= i\n",
+        "    if show == True:      \n",
+        "        for i in range(n, 1, -1):\n",
+        "            print (f'{i} x', end=' ')\n",
+        "        print (f'1 = {f}')\n",
+        "    else:\n",
+        "        return f\n",
+        "\n",
+        "# fatorial(5, show=True)\n",
+        "\n",
+        "help(fatorial) # docstring"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GEuKrEDfzMd5",
+        "outputId": "5c2edc07-0781-4c08-86fb-74f8f9cb810e"
+      },
+      "execution_count": 89,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Help on function fatorial in module __main__:\n",
+            "\n",
+            "fatorial(n=0, show=' ')\n",
+            "    -> Calcula o fatorial de um número\n",
+            "    :param n: número para cálculo\n",
+            "    :param show: (opcional) retorna o processo de cálculo\n",
+            "    :return: fatorial de um número n\n",
+            "\n"
+          ]
         }
       ]
     }
