--- a/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
+++ b/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
@@ -2543,7 +2543,7 @@
         "id": "QBd8Nr3Annzy",
         "outputId": "2c813c20-b18c-473e-87d1-9ec96c557526"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -2606,7 +2606,7 @@
         "id": "GEuKrEDfzMd5",
         "outputId": "5c2edc07-0781-4c08-86fb-74f8f9cb810e"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2623,6 +2623,44 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 103: Faça um programa que tenha uma função chamada ficha(),\n",
+        "# que receba dois parâmetros opcionais: o nome de um jogador e quantos gols ele marcou.\n",
+        "# O programa deverá ser capaz de mostrar a ficha do jogador, mesmo que algum dado não\n",
+        "# tenha sido informado corretamente.\n",
+        "# by geanclm in 16/04/2022 at 18:30h\n",
+        "\n",
+        "def ficha(nome='<DESCONHECIDO>', gols=0):\n",
+        "    \"\"\"\n",
+        "    -> Exibe a ficha do jogador\n",
+        "    :param nome: nome do jogador\n",
+        "    :param gols: quantidade de gols do jogador informado. Número inteiro. Ex: 3\n",
+        "    :print: imprime na tela a ficha as informações do jogador\n",
+        "    \"\"\"\n",
+        "    print(f'Jogador {nome} com total de {gols} gols marcados')\n",
+        "\n",
+        "nome = str(input('nome do jogador: '))\n",
+        "gols = str(input('total de gols: '))\n",
+        "\n",
+        "if gols.isnumeric():\n",
+        "    gols = int(gols)\n",
+        "else:\n",
+        "    gols = 0\n",
+        "if nome.strip() == '':\n",
+        "    ficha(gols=gols)\n",
+        "else:\n",
+        "    ficha(nome, gols)\n",
+        "\n",
+        "# help(ficha) # docstring"
+      ],
+      "metadata": {
+        "id": "Rw6EupsEEn2z"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
