--- a/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
+++ b/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
@@ -2661,6 +2661,54 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 104: Crie um programa que tenha a função leiaInt(),\n",
+        "# que vai funcionar de forma semelhante ‘a função input() do Python,\n",
+        "# só que fazendo a validação para aceitar apenas um valor numérico.\n",
+        "# Ex: n = leiaInt(‘Digite um n: ‘)\n",
+        "# by geanclm in 16/04/2022 at 18:59h\n",
+        "def leiaInt(n):\n",
+        "    n = str(input(n))\n",
+        "    if not n.isnumeric():\n",
+        "        while True:    \n",
+        "            print ('\\033[31m'+'ERRO! O dado informado \"'+n+'\" não é um número inteiro!'+'\\033[0;0m')\n",
+        "            n = str(input('Digite um número inteiro válido: '))\n",
+        "            if n.isnumeric():\n",
+        "                print('-'*33)\n",
+        "                print (f'OK! O dado informado \"{n}\" pode ser convertido para número inteiro!')\n",
+        "                break\n",
+        "    else:\n",
+        "        print('-'*33)\n",
+        "        print (f'OK! O dado informado \"{n}\" pode ser convertido para número inteiro!')\n",
+        "\n",
+        "n = leiaInt('Digite um número: ')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TDJiH_D2TaB9",
+        "outputId": "35e94e5b-2cec-4c33-8542-782925288c6c"
+      },
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um número:       \n",
+            "\u001b[31mERRO! O dado informado \"      \" não é um número inteiro!\u001b[0;0m\n",
+            "Digite um número inteiro válido: três escrito assim\n",
+            "\u001b[31mERRO! O dado informado \"três escrito assim\" não é um número inteiro!\u001b[0;0m\n",
+            "Digite um número inteiro válido: 5\n",
+            "---------------------------------\n",
+            "OK! O dado informado \"5\" pode ser convertido para número inteiro!\n"
+          ]
+        }
+      ]
     }
   ]
 }
