--- a/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
+++ b/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
@@ -2687,25 +2687,63 @@
         "n = leiaInt('Digite um número: ')"
       ],
       "metadata": {
+        "id": "TDJiH_D2TaB9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 105: Faça um programa que tenha uma função notas()\n",
+        "# que pode receber várias notas de alunos e vai retornar um dicionário\n",
+        "# com as seguintes informações:\n",
+        "# – Quantidade de notas\n",
+        "# – A maior nota\n",
+        "# – A situação (opcional)\n",
+        "# by geanclm in 17/04/2022 at 11:40h\n",
+        "\n",
+        "def soma(*notas, status=''):\n",
+        "    # docstrings\n",
+        "    \"\"\"\n",
+        "    -> Exibe o relatório de notas do aluno\n",
+        "    :param notas: relação de notas do aluno. Pode ser adcionado n notas.\n",
+        "    :param status: Exibe a situção do aluno de acordo com a média atual [REPROVADO, RECUPERAÇÃO, APROVADO]\n",
+        "    :print: imprime na tela os dados do aluno: total, maior nota, menor nota, média e situação\n",
+        "    \"\"\"\n",
+        "    dic = {}\n",
+        "    dic['total avaliações'] = len(notas)\n",
+        "    dic['maior n'] = max(notas)\n",
+        "    dic['menor n'] = min(notas)\n",
+        "    dic['média'] = sum(notas)/len(notas)\n",
+        "    if status:\n",
+        "        if dic['média'] >= 7:\n",
+        "            status = 'APROVADO'\n",
+        "        elif dic['média'] >= 5 and dic['média'] < 7:\n",
+        "            status = 'RECUPERAÇÃO'\n",
+        "        else:\n",
+        "            status = 'REPROVADO'\n",
+        "        dic['situação'] = status    \n",
+        "    print (dic)\n",
+        "\n",
+        "# programa principal\n",
+        "soma(5.5,2.5,1.5, status=True)\n",
+        "# help(soma)"
+      ],
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "TDJiH_D2TaB9",
-        "outputId": "35e94e5b-2cec-4c33-8542-782925288c6c"
+        "id": "jQ_dR52MpxXd",
+        "outputId": "fc5c7bc4-3131-4d77-dbf5-e00ec8097ccb"
       },
-      "execution_count": 84,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Digite um número:       \n",
-            "\u001b[31mERRO! O dado informado \"      \" não é um número inteiro!\u001b[0;0m\n",
-            "Digite um número inteiro válido: três escrito assim\n",
-            "\u001b[31mERRO! O dado informado \"três escrito assim\" não é um número inteiro!\u001b[0;0m\n",
-            "Digite um número inteiro válido: 5\n",
-            "---------------------------------\n",
-            "OK! O dado informado \"5\" pode ser convertido para número inteiro!\n"
+            "{'total avaliações': 3, 'maior n': 5.5, 'menor n': 1.5, 'média': 3.1666666666666665, 'situação': 'REPROVADO'}\n"
           ]
         }
       ]
