--- a/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
+++ b/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
@@ -5,14 +5,7 @@
     "colab": {
       "name": "Curso em Vídeo - PYTHON 3 - MUNDO 3.ipynb",
       "provenance": [],
-      "collapsed_sections": [
-        "Iv1JvJMxr_3l",
-        "ORH0FziVvh-Q",
-        "RWEDdX2metCk",
-        "QOCxu-_Q0ili",
-        "VWQFmfkF6tHR",
-        "26pUs0pTUJxu"
-      ]
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -2747,6 +2740,93 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 106: Faça um mini-sistema que utilize o Interactive Help do Python.\n",
+        "# O usuário vai digitar o comando e o manual vai aparecer.\n",
+        "# Quando o usuário digitar a palavra ‘FIM’, o programa se encerrará.\n",
+        "# Importante: use cores.\n",
+        "# by geanclm in 17/04/2022 at 14h\n",
+        "\n",
+        "from time import sleep\n",
+        "\n",
+        "# variável global\n",
+        "c=('\\033[0;0m',         # 0 = sem cor\n",
+        "   '\\033[37;41m',       # 1 = vermelho\n",
+        "   '\\033[30;42m',       # 2 = verde\n",
+        "   '\\033[30;43m',       # 3 = amarelo\n",
+        "   '\\033[30;44m',       # 4 = azul\n",
+        "   '\\033[30;45m',       # 5 = roxo\n",
+        "   '\\033[7;30m',        # 6 = branco   \n",
+        "    )\n",
+        "\n",
+        "def ajuda(consulta):\n",
+        "    escreva(f'Acessando o manual do comando \\'{consulta}\\'',4)\n",
+        "    print(c[3], end='')\n",
+        "    help(consulta)\n",
+        "    print(c[0], end='')\n",
+        "    sleep(2)\n",
+        "\n",
+        "def escreva(texto, cor=0):\n",
+        "    texto = ' '+texto+' '\n",
+        "    print(c[cor], end='')\n",
+        "    print('-'*(len(texto)))\n",
+        "    print(f'{texto}')\n",
+        "    print('-'*(len(texto)))\n",
+        "    print(c[0], end='')\n",
+        "    sleep(1)\n",
+        "\n",
+        "while True:\n",
+        "    escreva('SISTEMA DE AJUDA PyHELP', 2)\n",
+        "    consulta = str(input('Função / biblioteca [\"Q\" para sair]: '))\n",
+        "    if consulta.upper() == 'Q':\n",
+        "        break\n",
+        "    else:\n",
+        "         ajuda(consulta)\n",
+        "\n",
+        "escreva ('QUIT', 1)"
+      ],
+      "metadata": {
+        "id": "jDzzgRhNFAq6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print (f'''\\033[30;1;43m Curso em Vídeo \\033[0;0m''')\n",
+        "print (f'''\\033[37;1;42m Curso em Vídeo \\033[0;0m''')\n",
+        "print (f'''\\033[37;1;45m Curso em Vídeo \\033[0;0m''')\n",
+        "print (f'''\\033[37;1;44m Curso em Vídeo \\033[0;0m''')"
+      ],
+      "metadata": {
+        "id": "08EHsEWFVtEB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Aula 22 – Módulos e Pacotes"
+      ],
+      "metadata": {
+        "id": "kq7jVqNgiJIb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "kh6Bd97AiKd7"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
