deploy módulos - exercício 107
 desenvolvido no PyCharm

--- a/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
+++ b/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
@@ -2820,10 +2820,71 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# módulos e pacotes"
       ],
       "metadata": {
         "id": "kh6Bd97AiKd7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def fatorial(n):\n",
+        "    \"\"\"\n",
+        "    -> Função para retornar o fatorial de um número\n",
+        "    \"\"\"\n",
+        "    f=1\n",
+        "    for i in range(1, n+1):\n",
+        "        f *= i\n",
+        "    return f\n",
+        "\n",
+        "# programa principal\n",
+        "n = int(input('digite um número: '))\n",
+        "fat = fatorial(n)\n",
+        "print(f'O fatorial de {n} é {fat}')"
+      ],
+      "metadata": {
+        "id": "GL5cFkkIorO5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# VANTAGENS dos módulos\n",
+        "# organização do código\n",
+        "# facilidade de manutenção\n",
+        "# ocultação do código detalhado\n",
+        "# reutilizar em outros projetos"
+      ],
+      "metadata": {
+        "id": "_nUlSt72wXnS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# PACOTES (Python)\n",
+        "\n",
+        "# pacote usefull:\n",
+        "        # __init__.py\n",
+        "#     módulo números\n",
+        "        # __init__.py\n",
+        "        # função fatorial ()\n",
+        "#     módulo datas\n",
+        "        # __init__.py\n",
+        "#     módulo cores\n",
+        "        # __init__.py\n",
+        "#     módulo strngs\n",
+        "        # __init__.py"
+      ],
+      "metadata": {
+        "id": "ZQmQXcG8woBm"
       },
       "execution_count": null,
       "outputs": []
